--- a/views/pages/website/edit.pug
+++ b/views/pages/website/edit.pug
@@ -2,7 +2,7 @@ extends ../../layout
 
 block content
   .row
-    .col-12
+    .col-sm-12
       .card.card-primary
         .card-header
           h3.card-title Update #{website_name}
