--- a/views/pages/website/index.pug
+++ b/views/pages/website/index.pug
@@ -2,7 +2,7 @@ extends ../../layout
 
 block content
   .row
-    .col-12
+    .col-sm-12
       .card
         .card-header
           h3.card-title List of websites
@@ -23,7 +23,7 @@ block content
                 th STATUS
                 th CREATED
     
-    .col-12
+    .col-sm-12
       button.btn.btn-primary(onclick="location.href='/mmi-admin-dashboard/add-website'")
         span.fas.fa-globe
         |  New
