updated and added files

--- a/views/pages/article/index.pug
+++ b/views/pages/article/index.pug
@@ -7,6 +7,8 @@ block content
         .card-header
           h3.card-title List of Articles
           .card-tools
+            button.btn.btn-tool(onclick="location.href='/mmi-admin-dashboard/add-website'", title="New article")
+              i.fas.fa-book
             button(type="button", class="btn btn-tool", data-card-widget="maximize")
               i.fas.fa-expand
             button(type="button", class="btn btn-tool", data-card-widget="collapse")
