--- a/views/pages/website/view.pug
+++ b/views/pages/website/view.pug
@@ -10,7 +10,7 @@ block content
                             span(class="fas fa-globe", style="font-size:50px")
                     h3(class="profile-username text-center")=website_name
                     p(class="text-muted text-center")=website_category
-                        |  / #{website_type}
+                        |  | #{website_type}
                     ul(class="list-group list-group-unbordered mb-3")
                         li(class="list-group-item")
                             b Home Url
@@ -72,15 +72,26 @@ block content
                         #filters.tab-pane
                             if (is_using_selectors || is_using_snippets)
                                 p 
-                                    strong Article Filters
-                                textarea#filter-div.form-control=JSON.stringify(article_filter, null, 4)
-                                hr
-
-                                p 
                                     strong Section Filters
                                 textarea#filter-div2.form-control=JSON.stringify(section_filter, null, 4)
                                 hr
-
+                                p 
+                                    strong Article Filters
+                                textarea#filter-div.form-control=JSON.stringify(article_filter, null, 4)
+                                hr
+                                .input-group
+                                    span.input-group-prepend
+                                        span.input-group-text.bg-info
+                                            i.fas.fa-globe
+                                    input#section_url(type="search", name="section_url", class="form-control", placeholder="Place an section link of "+website_name)
+                                    span.input-group-append
+                                        select#request_source.form-control(name="request_source")
+                                            option(value="request") Request
+                                            option(value="cloudscraper") Cloud Scraper
+                                    span.input-group-append
+                                        button.btn.btn-default.bg-info(id="btnBrowseSection")
+                                            i.fas.fa-search
+                                            |  Browse
                             else
                                 h3.text-muted.text-center Scraper is not configured!
                                     a(class="nav-link", href="/mmi-admin-dashboard/websites/new/"+_id) Configure now?
@@ -100,6 +111,19 @@ block content
                                 else
                                     textarea#scraper-div.form-control=code_snippet
                                 hr
+                                .input-group
+                                    span.input-group-prepend
+                                        span.input-group-text.bg-info
+                                            i.fas.fa-globe
+                                    input#article_url(type="search", name="article_url", class="form-control", placeholder="Place an article link of "+website_name)
+                                    span.input-group-append
+                                        select#request_source2.form-control(name="request_source2")
+                                            option(value="request") Request
+                                            option(value="cloudscraper") Cloud Scraper
+                                    span.input-group-append
+                                        button.btn.btn-default.bg-info(id="btnBrowseArticle")
+                                            i.fas.fa-search
+                                            |  Browse
                             else
                                 h3.text-muted.text-center Scraper is not configured!
                                     a(class="nav-link", href="/mmi-admin-dashboard/websites/new/"+_id) Configure now?
@@ -108,6 +132,8 @@ block content
                             p.text-muted
                                 i.fas.fa-question-circle
                                 |  These are some of the options used in scraping.
+                                button.btn.btn-tool(type="button")
+                                    i.fas.fa-edit
                             ul(class="list-group list-group-unbordered mb-3")
                                 li(class="list-group-item")
                                     b Status
@@ -132,8 +158,17 @@ block content
                                     a(class="float-right")=is_using_selectors
                                 li(class="list-group-item")
                                     b Is using snippet
-                                    a(class="float-right")=is_using_snippets                             
+                                    a(class="float-right")=is_using_snippets
+
+                .overlay(style="display:none;")
+                    i(class="fas fa-2x fa-sync-alt fa-spin")
+            .card#result-card                             
 
 block js
+    script.
+        const id = `#{_id}`
+        const website_url = `#{website_url}`
+        const needs_https = `#{needs_https}`
+        const needs_endslash = `#{needs_endslash}`
     script(src="/admin-lte-3/javascripts/ace/src-noconflict/ace.js")
     script(src="/admin-lte-3/javascripts/website/view.js")
