--- a/views/pages/article/view.pug
+++ b/views/pages/article/view.pug
@@ -78,6 +78,8 @@ block content
           h3.card-title
             a(href=article_url, class="nav-link", target="_blank", title="View original article")=article_title
           .card-tools
+            button(type="button", class="btn btn-tool", data-toggle="modal", data-target="#modal-delete-article")
+                    i.fas.fa-trash
             button(type="button", class="btn btn-tool", onclick="location.href='/mmi-admin-dashboard/articles/edit/"+_id+"'")
                 i.fas.fa-edit
             button(type="button", class="btn btn-tool", data-card-widget="maximize")
@@ -92,3 +94,42 @@ block content
             blockquote(style="text-align: justify")=article_content
             p.float-right.text-muted(title=moment(article_publish_date).format('LLLL'))=article_authors.splice(-1)[0]
                 |,  #{moment(article_publish_date).fromNow()}
+        
+        div(class="modal fade", id="modal-delete-article")
+            div(class="modal-dialog")
+                div(class="modal-content bg-warning")
+                    div(class="modal-header")
+                        h4(class="modal-title") Do you want to delete this article?
+                        button(type="button", class="btn btn-danger", data-dismiss="modal", aria-label="Close")
+                            span(aria-hidden="true") &times;
+                        button(type="button", class="btn btn-success", onclick="deleteArticle('"+_id+"')", aria-label="Close")
+                            span(aria-hidden="true") &#10004;
+
+block js
+    script.
+        function deleteArticle(id){
+            console.log(id)
+            $.ajax({
+                url: '/mmi-admin-dashboard/articles/delete/'+id,
+                method: 'POST'
+            }).done(function(response){
+                 $(document).Toasts('create', {
+                    class: 'bg-success', 
+                    delay: 3000,
+                    autohide: true,
+                    title: 'Success.',
+                    body: 'Article has been removed!'
+                })
+                setTimeout(() => {
+                    location.href = '/mmi-admin-dashboard/articles' 
+                }, 250)
+            }).fail(function(response){
+                 $(document).Toasts('create', {
+                    class: 'bg-danger', 
+                    delay: 3000,
+                    autohide: true,
+                    title: 'Oops.',
+                    body: response.responseText
+                })
+            })
+        }
