--- a/views/pages/setting/edit.pug
+++ b/views/pages/setting/edit.pug
@@ -310,6 +310,7 @@ block js
     script.
         const id = '#{_id}'
         const website_url = '#{website_url}'
+        const needs_search_params = '#{needs_search_params}'
         const needs_https = '#{needs_https}'
         const needs_endslash = '#{needs_endslash}'
         const sections = JSON.parse(`!{JSON.stringify(main_sections)}`)
